public enum LocationType {
    RESTURANT,CUSTOMER, DELIVERYPERSON
}
