@startuml

title __WOLTDELIVERIES's Class Diagram__\n

  namespace  {
    class Address {
    }
  }
  

  namespace  {
    class City {
    }
  }
  

  namespace  {
    class Customer {
    }
  }
  

  namespace  {
    class DeliveryPerson {
    }
  }
  

  namespace  {
    class DistanceTo {
    }
  }
  

  namespace  {
    class Edge {
    }
  }
  

  namespace  {
    class GraphGUI {
    }
  }
  

  namespace  {
    class Location {
    }
  }
  

  namespace  {
    enum LocationType {
    }
  }
  

  namespace  {
    class Main {
    }
  }
  

  namespace  {
    class Restaurant {
    }
  }
  

  namespace  {
    class WoltDeliveries {
    }
  }
  

  Customer -up-|> Location
  Customer o-- Address : addres
  DeliveryPerson -up-|> Location
  DistanceTo o-- Location : successor
  Edge -up-|> javax.swing.JComponent
  GraphGUI .up.|> java.awt.event.ActionListener
  GraphGUI -up-|> javax.swing.JFrame
  GraphGUI o-- WoltDeliveries : woltDeliveries
  Location .up.|> java.lang.Comparable
  Location o-- Location : parent
  Location o-- LocationType : type
  Restaurant -up-|> Location
  Restaurant o-- Address : addres
  WoltDeliveries o-- City : city


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
